crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@annotation.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/declaration/annotation.input
---
Input: hello :: World

Start { kind: AnnotationDeclaration }
  Start { kind: Name }
    Token { kind: Lower }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

