crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@constructor-zero-arity.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/pattern/constructor-zero-arity.input
---
Input: Nil
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
Finish

