crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@empty-record.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/empty-record.input
---
Input: {}

Start { kind: RecordType }
  Start { kind: Wrapped }
    Token { kind: LeftCurly }
    Start { kind: RowInner }
    Finish
    Token { kind: RightCurly }
  Finish
Finish

