crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@forall-plain.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/forall-plain.input
---
Input: forall a. Type

Start { kind: ForallType }
  Token { kind: ForallKw }
  Start { kind: OneOrMore }
    Start { kind: TypeVariableBinding }
      Start { kind: Prefixed }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
Finish

