crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@non-empty-record.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/non-empty-record.input
---
Input: { a :: Hello, b :: Hello }

Start { kind: RecordType }
  Start { kind: Wrapped }
    Token { kind: LeftBracket }
    Start { kind: RowInner }
      Start { kind: Separated }
        Start { kind: RowField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
        Token { kind: Comma }
        Start { kind: RowField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
    Token { kind: RightBracket }
  Finish
Finish

